--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,3 +33,12 @@ body {
   margin: auto;
   padding: 100px 20px 100px 20px;
 }
+
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+}
