--- a/src/styles/Banner.module.css
+++ b/src/styles/Banner.module.css
@@ -1,5 +1,8 @@
 .section {
   background-color: #0065ff;
+  position: relative;
+  min-height: 900px;
+  overflow: hidden;
 }
 
 .title-container {
@@ -8,6 +11,12 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 113px;
+}
+
+.strip-container {
+  width: 100%;
+  position: relative;
+  transform: translate(0, 150px);
 }
 
 .title {
@@ -31,4 +40,14 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.first-strip {
+  inset: auto -30px 0px -30px;
+  transform: rotate(-3deg);
+}
+
+.second-strip {
+  inset: auto -30px 0px -30px;
+  transform: rotate(5deg);
 }
