--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,9 +29,22 @@ body {
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 1240px;
   margin: auto;
   padding: 100px 20px 100px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title {
+  font-family: "Dela Gothic One";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 60px;
+  line-height: 87px;
+  text-transform: uppercase;
+  margin: 0;
 }
 
 button {
