--- a/src/styles/CongratulationCard.module.css
+++ b/src/styles/CongratulationCard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: start;
   justify-content: space-between;
-  width: 500px;
+  width: 100%;
   height: 540px;
   border-radius: 60px;
   background: #f89d98;
