--- a/src/styles/Switcher.module.css
+++ b/src/styles/Switcher.module.css
@@ -11,6 +11,7 @@
   flex-shrink: none;
   margin: auto;
   box-sizing: border-box;
+  position: relative;
 }
 
 .switcher[active="true"] {
@@ -33,4 +34,22 @@
   width: 100%;
   height: 100%;
   pointer-events: none;
+}
+
+.title {
+  position: absolute;
+  font-family: "Futura PT";
+  right: 90px;
+  font-weight: 500;
+  font-size: 70px;
+  line-height: 95px;
+  text-align: center;
+  color: white;
+  transition: all 0.2s;
+  pointer-events: none;
+}
+
+.switcher[active="true"] .title {
+  right: auto;
+  left: 90px;
 }
