--- a/src/styles/Switcher.module.css
+++ b/src/styles/Switcher.module.css
@@ -53,3 +53,51 @@
   right: auto;
   left: 90px;
 }
+
+@media screen and (max-width: 968px) {
+  .switcher {
+    width: 300px;
+    height: 150px;
+    padding: 21px 20px 21px 20px;
+  }
+
+  .switcher-handler {
+    width: 120px;
+    height: 120px;
+  }
+
+  .title {
+    font-size: 40px;
+    line-height: 55px;
+    right: 40px;
+  }
+
+  .switcher[active="true"] .title {
+    right: auto;
+    left: 40px;
+  }
+}
+
+@media screen and (max-width: 468px) {
+  .switcher {
+    width: 250px;
+    height: 120px;
+    padding: 21px 18px 21px 18px;
+  }
+
+  .switcher-handler {
+    width: 90px;
+    height: 90px;
+  }
+
+  .title {
+    font-size: 35px;
+    line-height: 45px;
+    right: 30px;
+  }
+
+  .switcher[active="true"] .title {
+    right: auto;
+    left: 30px;
+  }
+}
