--- a/src/styles/CongratulationCard.module.css
+++ b/src/styles/CongratulationCard.module.css
@@ -4,13 +4,14 @@
   align-items: start;
   justify-content: space-between;
   width: 100%;
-  height: 540px;
+  min-height: 540px;
   border-radius: 60px;
   background: #f89d98;
   overflow: hidden;
   padding: 40px;
   box-sizing: border-box;
   justify-self: center;
+  gap: 20px;
 }
 
 .text {
@@ -29,4 +30,33 @@
   line-height: 41px;
   color: inherit;
   margin: 0;
+}
+
+@media screen and (max-width: 968px) {
+  .card {
+    padding: 35px;
+    min-height: 440px;
+  }
+
+  .text {
+    font-size: 28px;
+    line-height: 36px;
+  }
+}
+
+@media screen and (max-width: 468px) {
+  .card {
+    padding: 30px;
+    min-height: 340px;
+  }
+
+  .text {
+    font-size: 24px;
+    line-height: 26px;
+  }
+
+  .name {
+    font-size: 28px;
+    line-height: 32px;
+  }
 }
