--- a/src/styles/CongratulationForm.module.css
+++ b/src/styles/CongratulationForm.module.css
@@ -48,3 +48,40 @@
   margin: auto;
   transition: all 0.3ms;
 }
+
+@media screen and (max-width: 968px) {
+  .input-base-classes {
+    padding: 30px;
+    font-size: 25px;
+    line-height: 35px;
+  }
+
+  .input {
+    margin-bottom: 90px;
+  }
+
+  .button {
+    padding: 30px 60px 30px 60px;
+    font-size: 30px;
+    line-height: 48px;
+  }
+}
+
+@media screen and (max-width: 468px) {
+  .input-base-classes {
+    padding: 25px;
+    font-size: 22px;
+    line-height: 26px;
+  }
+
+  .input {
+    margin-bottom: 40px;
+  }
+
+  .button {
+    width: 100%;
+    padding: 20px 30px 20px 30px;
+    font-size: 20px;
+    line-height: 28px;
+  }
+}
