--- a/src/styles/Congratulations.module.css
+++ b/src/styles/Congratulations.module.css
@@ -9,3 +9,9 @@
   gap: 30px;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 1280px) {
+  .container {
+    grid-template-columns: repeat(1, 100%);
+  }
+}
