--- a/src/styles/Pirate.module.css
+++ b/src/styles/Pirate.module.css
@@ -21,6 +21,7 @@
 .content {
   display: flex;
   justify-content: space-between;
+  gap: 30px;
 }
 
 .title-container {
@@ -34,5 +35,31 @@
   height: 590px;
   background: #ffffff;
   border-radius: 60px;
-  transform: rotate(3deg);
+  transform: rotate(3deg) scale(0.9);
+}
+
+@media screen and (max-width: 1124px) {
+  .title {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .title-container {
+    width: 100%;
+  }
+
+  .subtitle {
+    text-align: center;
+  }
+
+  .content {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .card {
+    width: 100%;
+  }
 }
