--- a/src/styles/Pirate.module.css
+++ b/src/styles/Pirate.module.css
@@ -1,5 +1,7 @@
 .section {
   background: #b7f7f7;
+  position: relative;
+  overflow: hidden;
 }
 
 .title {
@@ -16,6 +18,18 @@
   line-height: 51px;
   color: #232323;
   margin: 0;
+}
+
+.blur{
+  width: 110px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
+.people{
+  position: absolute;
+  bottom: -23px;
+  right: 0px;
 }
 
 .content {
