--- a/src/styles/CongratulationForm.module.css
+++ b/src/styles/CongratulationForm.module.css
@@ -34,6 +34,42 @@
   margin-bottom: 146px;
 }
 
+.actions-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.colors-title {
+  font-family: "Futura PT";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 41px;
+  color: rgba(0, 0, 0, 0.2);
+  margin: 0;
+  margin-bottom: 40px;
+}
+
+.colors-container {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+}
+
+.colors-buttons-container {
+  display: flex;
+  gap: 33px;
+}
+
+.color-button {
+  border-radius: 100%;
+  width: 60px;
+  height: 60px;
+  flex-shrink: 0;
+}
+
 .button {
   padding: 40px 80px 40px 80px;
   border: 3px solid #000000;
@@ -45,8 +81,35 @@
   text-transform: uppercase;
   color: #000000;
   width: fit-content;
-  margin: auto;
   transition: all 0.3ms;
+}
+
+@media screen and (max-width: 1160px) {
+  .actions-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .colors-title {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 26px;
+    line-height: 35px;
+  }
+
+  .color-button {
+    width: 35px;
+    height: 35px;
+  }
+
+  .colors-container {
+    width: 100%;
+  }
+
+  .colors-buttons-container {
+    justify-content: center;
+    gap: 15px;
+  }
 }
 
 @media screen and (max-width: 968px) {
