--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -61,6 +61,38 @@ button {
   overflow: hidden;
 }
 
+.modal-enter {
+  opacity: 0;
+}
+
+.modal-enter-active {
+  opacity: 1;
+  transition: opacity 0.1s;
+}
+
+.modal-exit {
+  opacity: 1;
+}
+
+.modal-exit-active {
+  opacity: 0;
+  transition: opacity 0.1s;
+}
+
+.modal-enter .modal-container {
+  transform: scale(0.95);
+}
+
+.modal-enter-active .modal-container {
+  transform: scale(1);
+  transition: transform 0.1s;
+}
+
+.modal-exit-active .modal-container {
+  transform: scale(0.95);
+  transition: transform 0.1s;
+}
+
 @media screen and (max-width: 968px) {
   .title {
     font-size: 50px;
