--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -1,5 +1,14 @@
 .modal {
   background: white;
-  padding: 10px;
+  padding: 30px;
   border-radius: 60px;
+  position: relative;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 968px) {
+  .modal {
+    width: 100%;
+  }
 }
