--- a/src/styles/Pirate.module.css
+++ b/src/styles/Pirate.module.css
@@ -21,7 +21,7 @@
 }
 
 .blur{
-  width: 110px;
+  width: 130px;
   margin-left: 12px;
   margin-right: 12px;
 }
@@ -29,7 +29,9 @@
 .people{
   position: absolute;
   bottom: -23px;
-  right: 0px;
+  right: -40px;
+  width: 400px;
+  height: 512px;
 }
 
 .content {
@@ -45,11 +47,13 @@
 }
 
 .card {
-  width: 445px;
-  height: 590px;
-  background: #ffffff;
   border-radius: 60px;
-  transform: rotate(3deg) scale(0.9);
+  display: flex;
+  justify-content: center;
+}
+.pirate {
+  width: 446px;
+  height: 588px;
 }
 
 @media screen and (max-width: 1124px) {
@@ -62,18 +66,38 @@
     width: 100%;
   }
 
-  .subtitle {
-    text-align: center;
-  }
-
   .content {
     flex-direction: column;
     align-items: center;
+  }
+  .subtitle{
+    text-align: center;
   }
 }
 
 @media screen and (max-width: 600px) {
   .card {
     width: 100%;
+  }
+  .people{
+    width: 280px;
+    height: 356px;
+  }
+  .pirate {
+    width: 290px;
+    height: 383px;
+  }
+}
+@media screen and (max-width: 968px) {
+.subtitle{
+  font-size: 50px;
+  line-height: 77px;
+}
+}
+
+@media screen and (max-width: 468px) {
+  .subtitle{
+    font-size: 34px;
+    line-height: 47px;
   }
 }
