--- a/src/styles/Sport.module.css
+++ b/src/styles/Sport.module.css
@@ -1,21 +1,124 @@
 .section {
   background-color: white;
+  position: relative;
 }
 
 .content {
   width: 100%;
   display: flex;
   justify-content: start;
+  flex-direction: column;
+  margin:103px 100px 74px 100px ;
+  
 }
 
 .title {
   color: black;
   text-align: left;
-  margin-bottom: 40px;
+  font-size: 60px;
+  line-height: 86px;
 }
 
 .title-container {
   display: flex;
-  flex-direction: column;
-  width: 50%;
+  justify-content: space-between;
 }
+.description{
+  font-size: 40px;
+  margin: 0;
+  text-align: end;
+  line-height: 51px;
+}
+.content-container{
+  margin-top: 140px;
+  display: flex;
+align-items: center;
+gap: 45px;
+justify-content: space-between;
+
+}
+.content-block{
+  width: 520px;
+  height: 590px;
+  border-radius: 60px;
+  overflow: hidden;
+}
+.vs{
+  font-size: 60px;
+  line-height: 86.88px;
+  margin: 0;
+}
+.tiger{
+  position: absolute;
+  left: 0;
+  bottom: -27px;
+  width: 515px;
+  height: 335px;
+}
+
+
+@media screen and (max-width: 1124px) {
+.title-container{
+flex-direction: column;
+}
+.description{
+  text-align: start;
+  line-height: 40px;
+  margin-top: 20px;
+}
+.title{
+  text-align: start;
+  line-height: 64px;
+}
+.content-container{
+  flex-direction: column;
+}
+.video-container{
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  left: -20px;
+}
+.tiger{
+  width: 420px;
+  height: 250px;
+}
+}
+
+@media screen and (max-width: 968px) {
+  .description{
+font-size: 30px;
+  }
+  .title{
+font-size:50px;
+  }
+  .video-container{
+    left:-15px;
+  }
+ 
+}
+
+@media screen and (max-width: 600px) {
+  .description{
+    font-size: 26px;
+    line-height: 33px;
+      }
+      .title{
+    font-size:36px;
+    line-height: 52px;
+      }
+      .content{
+        margin:0;
+      }
+      .content-block{
+        width: 290px;
+        height: 383px;
+      }
+      .tiger{
+        width: 225px;
+        height: 166px;
+      }
+}
+
+
