--- a/src/styles/Father.module.css
+++ b/src/styles/Father.module.css
@@ -1,7 +1,97 @@
 .section {
   background: #f89d98;
+  position: relative;
+  overflow: hidden;
 }
 
 .title {
   color: #f2eb3f;
+  margin-bottom: 40px;
+}
+
+.subtitle {
+  font-family: "Futura PT";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 51px;
+  color: #ffffff;
+  margin: 0;
+}
+
+.title-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  max-width: 500px;
+  text-align: right;
+}
+
+.content {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 30px;
+  position: relative;
+}
+
+.image-container {
+  width: 446px;
+  height: 588px;
+  overflow: hidden;
+  border-radius: 42.7989px;
+  transform: rotate(-3deg) scale(0.95);
+  max-width: 500px;
+}
+
+.baboon {
+  width: 300px;
+  height: 420px;
+  position: absolute;
+  z-index: 200;
+  bottom: 0;
+  left: 450px;
+  transform: translate(0, 70px) rotate(18.52deg);
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+@media screen and (max-width: 968px) {
+  .content {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .title-container {
+    margin-bottom: 25px;
+    text-align: left;
+    align-items: flex-start;
+  }
+
+  .image-container {
+    width: 100%;
+    height: auto;
+    transform: rotate(-3deg) scale(0.9);
+  }
+
+  .title {
+    margin-bottom: 20px;
+  }
+
+  .subtitle {
+    font-size: 26px;
+    line-height: 33px;
+  }
+
+  .baboon {
+    width: 185px;
+    height: 260px;
+    left: auto;
+    right: -30px;
+  }
 }
