--- a/src/styles/StartUp.module.css
+++ b/src/styles/StartUp.module.css
@@ -25,6 +25,48 @@
   transform: rotate(41.39deg);
 }
 
+.slide {
+  width: 100%;
+  max-height: 800px;
+  overflow: hidden;
+}
+
+.slide-image {
+  border-radius: 40px;
+  overflow: hidden;
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+.arrow {
+  width: 36px;
+  height: 60px;
+}
+
+.arrow-left {
+  transform: rotate(180deg) translateX(40px);
+}
+
+.arrow-right {
+  transform: translateX(40px);
+}
+
+.arrow:disabled {
+  opacity: 0.3;
+}
+
+.arrow-image {
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-container {
+  width: 100%;
+  padding: 0 40px 0 40px;
+  box-sizing: border-box;
+}
+
 @media screen and (max-width: 968px) {
   .melon {
     position: absolute;
@@ -32,5 +74,18 @@
     height: 240px;
     left: 0;
     top: 80px;
+  }
+
+  .arrow {
+    width: 26px;
+    height: 40px;
+  }
+
+  .arrow-left {
+    transform: rotate(180deg) translateX(35px);
+  }
+
+  .arrow-right {
+    transform: translateX(35px);
   }
 }
