--- a/src/styles/Pirate.module.css
+++ b/src/styles/Pirate.module.css
@@ -24,8 +24,8 @@
 .blur {
   width: 130px;
   height: 33px;
-  margin-left: 12px;
-  margin-right: 12px;
+  margin-left: 6px;
+  margin-right: 6px;
 }
 
 .people {
@@ -56,6 +56,10 @@
 .pirate {
   width: 446px;
   height: 588px;
+}
+
+.blur-image {
+  transform: translateY(7px);
 }
 
 @media screen and (max-width: 1124px) {
@@ -114,8 +118,10 @@
     line-height: 33px;
     text-align: left;
   }
-
   .blur {
-    margin: 0 1px 0 1px;
+    width: 80px;
+  }
+  .blur-image {
+    height: 23px;
   }
 }
